fixup! Create github workflow

--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -23,7 +23,6 @@ jobs:
 
     - name: Create Virtualenv and Build Wheel
       run: |
-        python -m venv venv
-        source venv/bin/activate
+        python -m venv .venv
         python setup.py venv
         python setup.py bdist_wheel
