--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -18,11 +18,13 @@ jobs:
 
     - name: Install dependencies
       run: |
+        sudo apt-get update
+        sudo apt-get install make
         python -m pip install --upgrade pip
         python -m pip install wheel venv
 
     - name: Create Virtualenv and Build Wheel
       run: |
         python -m venv .venv
-        python setup.py venv
-        python setup.py bdist_wheel
+        make venv
+        make bdist_wheel
