--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -18,10 +18,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo apt-get update
-        sudo apt-get install make
         python -m pip install --upgrade pip
-        python -m pip install wheel venv
+        python -m pip install wheel
 
     - name: Create Virtualenv and Build Wheel
       run: |
